force-app/main/default/objects/onemergefree__MergeRuleset__mdt/onemergefree__MergeRuleset__mdt.object-meta.xml
<CustomObject>
    <description>The set of Merge Rules for a specific SObjectType (e.g. Account) and optionally associated Duplicate Rules.</description>
    <label>Merge Ruleset</label>
    <pluralLabel>Merge Rulesets</pluralLabel>
</CustomObject>