force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__IdentifierFieldName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IdentifierFieldName__c</fullName>
    <description>The text field on the Master Record populated with the Merge Ruleset Identifier e.g. Account onemergefree__MergeRulesetIdentifier__c.</description>
    <inlineHelpText>The text field on the Master Record populated with the Merge Ruleset Identifier e.g. Account onemergefree__MergeRulesetIdentifier__c.</inlineHelpText>
    <label>Identifier Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>