force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__IsAbortOnCrossObjectMatch__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsAbortOnCrossObjectMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then merge processing is aborted for Duplicate Record Sets that contain a cross object match. Otherwise, cross-object matches are ignored.</description>
    <inlineHelpText>If TRUE, then merge processing is aborted for Duplicate Record Sets that contain a cross object match. Otherwise, cross-object matches are ignored.</inlineHelpText>
    <label>Is Abort on Cross Object Match?</label>
    <type>Checkbox</type>
</CustomField>