force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__IsAbortOnInvalidMergeRule__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsAbortOnInvalidMergeRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then merge processing is aborted when an invalid Merge Rule is encountered. Merge Rules can be invalid due to invalid field references, invalid object mappings or missing object access or field level security permissions.</description>
    <inlineHelpText>If TRUE, then merge processing is aborted when an invalid Merge Rule is encountered. Merge Rules can be invalid due to invalid field references, invalid object mappings or missing object access or field level security permissions.</inlineHelpText>
    <label>Is Abort on Invalid Merge Rule?</label>
    <type>Checkbox</type>
</CustomField>