force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__IsActive__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True then the MergeRuleset will be processed by Merge Jobs.</description>
    <inlineHelpText>If True then the MergeRuleset will be processed by Merge Jobs.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>