force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__IsMergeMasterCheckboxFieldName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsMergeMasterCheckboxFieldName__c</fullName>
    <description>The API Field Name for the Checkbox field on the SObject Type which is set to True for Merge Master records.</description>
    <inlineHelpText>The API Field Name for the Checkbox field on the SObject Type which is set to True for Merge Master records.</inlineHelpText>
    <label>Is Merge Master Checkbox Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>