force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__IsTest__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the Merge Ruleset is used for unit testing.</description>
    <inlineHelpText>True if the Merge Ruleset is used for unit testing.</inlineHelpText>
    <label>Is Test?</label>
    <type>Checkbox</type>
</CustomField>