force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__LastMergedDateFieldName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__LastMergedDateFieldName__c</fullName>
    <description>The API Field Name for the field on the SObject Type which is set with the timestamp if the last merge event.</description>
    <inlineHelpText>The API Field Name for the field on the SObject Type which is set with the timestamp if the last merge event.</inlineHelpText>
    <label>Last Merged Date Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>