force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__MasterRecord2ndPriority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MasterRecord2ndPriority__c</fullName>
    <description>Master Record Sercondary Priority determines how how Source Record values are prioritised for Master Record determination.</description>
    <inlineHelpText>Master Record Secondary Priority determines how how Source Record values are prioritised for Master Record determination.</inlineHelpText>
    <label>Master Record 2nd Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newest</fullName>
            </value>
            <value>
                <fullName>Oldest</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>