force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__MasterRecordPriority__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MasterRecordPriority__c</fullName>
    <description>Master Record Priority determines how how Source Record values are prioritised for Master Record determination.</description>
    <inlineHelpText>Master Record Priority determines how how Source Record values are prioritised for Master Record determination.</inlineHelpText>
    <label>Master Record Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newest</fullName>
                <default>true</default>
                <label>Newest</label>
            </value>
            <value>
                <fullName>Oldest</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>