force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__MasterRecordPriorityFieldName__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MasterRecordPriorityFieldName__c</fullName>
    <description>The API Field Name for the field on the SObject Type which returns the record-level priority scale used to detemine which Matched Record becomes the Master Record for the group.</description>
    <inlineHelpText>The API Field Name for the field on the SObject Type which returns the record-level priority scale used to detemine which Matched Record becomes the Master Record for the group.</inlineHelpText>
    <label>Master Record Priority Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>