force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__SObjectSubType__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__SObjectSubType__c</fullName>
    <description>SObjectSubType for which the Merge Ruleset applies e.g. PersonAccount.</description>
    <inlineHelpText>SObjectSubType for which the Merge Ruleset applies e.g. PersonAccount.</inlineHelpText>
    <label>SObject Sub Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>