force-app/main/default/objects/onemergefree__MergeRuleset__mdt/fields/onemergefree__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__SObjectType__c</fullName>
    <description>SObjectType to which the Merge Ruleset applies.</description>
    <inlineHelpText>SObjectType to which the Merge Ruleset applies.</inlineHelpText>
    <label>SObject Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>