force-app/main/default/objects/onemergefree__MergeRuleset__mdt/validationRules/onemergefree__Identifier_Field_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>onemergefree__Identifier_Field_Name_Required</fullName>
    <active>true</active>
    <description>An Identifier Field Name is required.</description>
    <errorConditionFormula>ISBLANK(onemergefree__IdentifierFieldName__c)</errorConditionFormula>
    <errorDisplayField>onemergefree__IdentifierFieldName__c</errorDisplayField>
    <errorMessage>An Identifier Field Name is required.</errorMessage>
</ValidationRule>