force-app/main/default/objects/onemergefree__MergeRuleset__mdt/validationRules/onemergefree__Master_Record_2nd_Priority_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>onemergefree__Master_Record_2nd_Priority_Required</fullName>
    <active>true</active>
    <description>A Master Record 2nd Priority Field Name is required.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(TEXT(onemergefree__MasterRecord2ndPriority__c))), 
 ISBLANK( onemergefree__MasterRecord2ndPriorityFieldName__c)
)</errorConditionFormula>
    <errorDisplayField>onemergefree__MasterRecord2ndPriorityFieldName__c</errorDisplayField>
    <errorMessage>A Master Record 2nd Priority Field Name is required.</errorMessage>
</ValidationRule>