force-app/main/default/objects/onemergefree__MergeRuleset__mdt/validationRules/onemergefree__Master_Record_Priority_Field_Equivalence.validationRule-meta.xml
<ValidationRule>
    <fullName>onemergefree__Master_Record_Priority_Field_Equivalence</fullName>
    <active>true</active>
    <description>Master Record Priority and Second Priority must be different fields.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(onemergefree__MasterRecordPriorityFieldName__c)),
  NOT(ISBLANK(onemergefree__MasterRecord2ndPriorityFieldName__c)),
  onemergefree__MasterRecordPriorityFieldName__c=onemergefree__MasterRecord2ndPriorityFieldName__c
)</errorConditionFormula>
    <errorDisplayField>onemergefree__MasterRecordPriorityFieldName__c</errorDisplayField>
    <errorMessage>Master Record Priority and Second Priority must be different fields.</errorMessage>
</ValidationRule>