force-app/main/default/objects/onemergefree__MergeRuleset__mdt/validationRules/onemergefree__Master_Record_Priority_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>onemergefree__Master_Record_Priority_Required</fullName>
    <active>true</active>
    <description>A Master Record Priority Field Name is required.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(TEXT(onemergefree__MasterRecordPriority__c))), 
 ISBLANK( onemergefree__MasterRecordPriorityFieldName__c)
)</errorConditionFormula>
    <errorDisplayField>onemergefree__MasterRecordPriorityFieldName__c</errorDisplayField>
    <errorMessage>A Master Record Priority Field Name is required.</errorMessage>
</ValidationRule>